--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "version": "0.0.1",
   "repository": {
-    "url": ""
+    "type": "git",
+    "url": "git://github.com/siddMahen/ecc.js.git"
   },
   "main": "index.js",
   "engines": {
